--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
 </head>
-<body style="overflow: hidden; height: 100vh;">
+<body style="margin: 0; display: flex; flex-direction: column; height: 100vh;">
 
 <header class="topbar">
   <div class="brand">Cheverly, MD Air Quality Dashboard</div>
@@ -21,43 +21,46 @@
   </nav>
 </header>
 
-<div id="layout" style="display: flex; height: calc(100vh - 60px);">
-  <aside id="sidebar">
+<div id="layout" style="display: flex; flex: 1; overflow: hidden;">
+  <aside id="sidebar" style="width: 350px; background: #f4f6f8; border-right: 1px solid #ddd; padding: 15px; overflow-y: auto;">
     <div class="card">
       <label>Location Search</label>
       <input type="text" id="addrInput" placeholder="Enter address...">
-      <button id="locateBtn">Find Nearest Station</button>
+      <button id="locateBtn" style="width:100%; padding:10px; margin-top:5px; background:#4477ce; color:white; border:none; border-radius:4px; cursor:pointer;">Find Nearest Station</button>
     </div>
     <div class="card">
       <label>Station Selection</label>
-      <select id="devSel" onchange="handleDropdownChange(this.value)">
-          <option value="">Select a Station...</option>
-      </select>
+      <select id="devSel" onchange="handleDropdownChange(this.value)" style="width:100%; padding:8px;"></select>
     </div>
     <div class="card" style="min-height: 160px; text-align: center;">
       <label>Live Station Reading</label>
-      <div id="statName" style="font-weight:bold; font-size:0.9rem; color:#333; margin-bottom:5px;">Loading...</div>
+      <div id="statName" style="font-weight:bold; font-size:0.9rem; color:#333; margin-bottom:5px;">Loading Network...</div>
       <div id="statAQI" class="aqi-val" style="color:#ccc;">--</div>
       <div style="font-size:0.75rem; color:#666; font-weight: bold;">CUMULATIVE CE-AQI</div>
-      <div id="healthAdvice" class="health-msg" style="display:none;"></div>
+      <div id="healthAdvice" class="health-msg" style="display:none; font-size:0.8rem; margin-top:10px; padding:8px; border:1px solid #eee;"></div>
     </div>
     <div class="card">
       <label>Network Legend</label>
-      <div class="legend-item"><span class="dot" style="background:#00e400"></span> Good (0-50)</div>
-      <div class="legend-item"><span class="dot" style="background:#ffff00"></span> Moderate (51-100)</div>
-      <div class="legend-item"><span class="dot" style="background:#ff7e00"></span> Sensitive (101-150)</div>
-      <div class="legend-item"><span class="dot" style="background:#ff0000"></span> Unhealthy (151+)</div>
+      <div style="font-size: 0.8rem; margin-top: 5px;">
+        <div style="display:flex; align-items:center; margin-bottom:4px;"><span style="width:12px; height:12px; background:#00e400; border-radius:50%; display:inline-block; margin-right:8px; border:1px solid #000;"></span> Good (0-50)</div>
+        <div style="display:flex; align-items:center; margin-bottom:4px;"><span style="width:12px; height:12px; background:#ffff00; border-radius:50%; display:inline-block; margin-right:8px; border:1px solid #000;"></span> Moderate (51-100)</div>
+        <div style="display:flex; align-items:center; margin-bottom:4px;"><span style="width:12px; height:12px; background:#ff7e00; border-radius:50%; display:inline-block; margin-right:8px; border:1px solid #000;"></span> Sensitive (101-150)</div>
+        <div style="display:flex; align-items:center;"><span style="width:12px; height:12px; background:#ff0000; border-radius:50%; display:inline-block; margin-right:8px; border:1px solid #000;"></span> Unhealthy (151+)</div>
+      </div>
     </div>
   </aside>
+  
   <div id="main-content" style="flex: 1; display: flex; flex-direction: column;">
-    <div id="map" style="flex: 1; min-height: 400px;"></div>
-    <div id="chart-box" style="height: 300px; padding: 15px; background: white;"><canvas id="airChart"></canvas></div>
+    <div id="map" style="flex: 1; min-height: 300px;"></div>
+    <div id="chart-box" style="height: 250px; background: white; padding: 10px; border-top: 1px solid #ddd;">
+        <canvas id="airChart"></canvas>
+    </div>
   </div>
 </div>
 
 <script>
   const PURPLE_AIR_KEY = "9ADB5C6C-A9B0-11EF-A261-42010A80000F";
-  // Updated Proxy for GitHub stability
+  // This proxy works better for static sites like GitHub Pages
   const PROXY = "https://api.allorigins.win/raw?url=";
 
   const SENSORS = {
@@ -78,7 +81,7 @@
 
   const chart = new Chart(document.getElementById('airChart').getContext('2d'), {
     type: 'line',
-    data: { datasets: [{ label: 'Local Station', data: [], borderColor: '#4477ce', tension: 0.1, fill: true, backgroundColor: 'rgba(68, 119, 206, 0.1)' }]},
+    data: { datasets: [{ label: 'Station History (CE-AQI)', data: [], borderColor: '#4477ce', tension: 0.1, fill: true, backgroundColor: 'rgba(68, 119, 206, 0.1)' }]},
     options: { responsive: true, maintainAspectRatio: false, scales: { x: { type: 'time' }, y: { beginAtZero: true } } }
   });
 
@@ -108,7 +111,7 @@
       document.getElementById('statAQI').style.color = getAQIColor(aqi);
       const adv = document.getElementById('healthAdvice'); adv.style.display = "block";
       adv.innerHTML = aqi > 150 ? "<b>ALERT:</b> Unhealthy." : aqi > 100 ? "<b>CAUTION:</b> Sensitive Groups." : "Air quality is satisfactory.";
-    } catch(e) { console.error(e); }
+    } catch(e) { console.error("History fetch error:", e); }
   }
 
   function handleDropdownChange(id) { if(markerMap[id]) { map.flyTo(markerMap[id].getLatLng(), 15); updateDisplay(id); } }
@@ -118,21 +121,22 @@
     const url = `${PROXY}${encodeURIComponent("https://api.purpleair.com/v1/sensors?nwlng=-77.1&nwlat=39.0&selng=-76.8&selat=38.8&fields=sensor_index,latitude,longitude,pm2.5_atm")}`;
     try {
       const res = await fetch(url, { headers: { "X-API-Key": PURPLE_AIR_KEY } }).then(r=>r.json());
-      res.data.forEach(r => {
-        const id = String(r[0]);
-        if (SENSORS[id]) {
-          const aqi = calculateCEAQI(r[3], id);
-          const m = L.circleMarker([r[1], r[2]], { radius: 10, fillColor: getAQIColor(aqi), color: "#000", weight: 2, fillOpacity: 0.9 }).addTo(map);
-          markerMap[id] = m; sel.add(new Option(SENSORS[id], id));
-          m.on('click', () => { sel.value = id; handleDropdownChange(id); });
-        }
-      });
-    } catch(e) { 
-        console.error(e); 
-        document.getElementById('statName').innerText = "Error Loading Sensors. Check API Key.";
-    }
+      if(res.data) {
+        res.data.forEach(r => {
+          const id = String(r[0]);
+          if (SENSORS[id]) {
+            const aqi = calculateCEAQI(r[3], id);
+            const m = L.circleMarker([r[1], r[2]], { radius: 10, fillColor: getAQIColor(aqi), color: "#000", weight: 2, fillOpacity: 0.9 }).addTo(map);
+            markerMap[id] = m; sel.add(new Option(SENSORS[id], id));
+            m.on('click', () => { sel.value = id; handleDropdownChange(id); });
+          }
+        });
+      }
+    } catch(e) { console.error("Sensor list error:", e); }
+    
     updateDisplay("203577");
-    setTimeout(() => { map.invalidateSize(); }, 500); // Fixes the "small map" bug
+    // This part ensures the map renders fully on the page
+    setTimeout(() => { map.invalidateSize(); }, 800);
   }
   init();
 </script>
