--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Cheverly Air Quality Dashboard</title>
+  <title>Cheverly EJAT Network</title>
   
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
@@ -11,32 +11,32 @@
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
 
   <style>
-    :root { --navy: #1a305e; --blue: #4477ce; }
-    body { margin: 0; font-family: system-ui, -apple-system, sans-serif; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
-    .topbar { background: var(--navy); color: white; padding: 12px 20px; display: flex; justify-content: space-between; align-items: center; z-index: 1000; }
-    .nav a { color: white; text-decoration: none; margin-left: 15px; font-size: 0.9rem; opacity: 0.8; }
+    :root { --navy: #1a305e; --blue: #4477ce; --orange: #f59e0b; }
+    body { margin: 0; font-family: sans-serif; height: 100vh; display: flex; flex-direction: column; overflow: hidden; background: #fdfdfd; }
+    .topbar { background: var(--navy); color: white; padding: 15px 25px; display: flex; justify-content: space-between; align-items: center; z-index: 2000; }
+    .nav a { color: white; text-decoration: none; margin-left: 20px; font-size: 0.9rem; opacity: 0.8; }
     #layout { display: flex; flex: 1; min-height: 0; }
-    #sidebar { width: 350px; background: #f4f6f8; border-right: 1px solid #ddd; padding: 15px; overflow-y: auto; box-sizing: border-box; }
+    #sidebar { width: 360px; background: #f8f9fa; border-right: 1px solid #ddd; padding: 20px; overflow-y: auto; box-sizing: border-box; }
     #main { flex: 1; display: flex; flex-direction: column; }
-    #map { height: 45%; border-bottom: 1px solid #ddd; }
-    #chart-box { height: 55%; padding: 15px; background: white; box-sizing: border-box; }
+    #map { height: 45%; border-bottom: 1px solid #ddd; z-index: 1; }
+    #chart-box { height: 55%; padding: 20px; background: white; box-sizing: border-box; }
     .card { background: white; padding: 15px; border-radius: 8px; border: 1px solid #ddd; margin-bottom: 15px; }
-    label { font-size: 0.75rem; font-weight: bold; color: #555; text-transform: uppercase; margin-bottom: 5px; display: block; }
-    input, select { width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; margin-bottom: 10px; }
+    label { font-size: 0.7rem; font-weight: bold; color: #666; text-transform: uppercase; margin-bottom: 5px; display: block; }
+    input, select { width: 100%; padding: 10px; margin: 8px 0; border: 1px solid #ccc; border-radius: 4px; box-sizing: border-box; }
     button { width: 100%; padding: 12px; background: var(--blue); color: white; border: none; border-radius: 4px; font-weight: bold; cursor: pointer; }
     .aqi-val { font-size: 64px; font-weight: 900; text-align: center; display: block; line-height: 1; margin: 10px 0; text-shadow: 1px 1px 0 #000, -1px -1px 0 #000; }
-    .legend-item { display: flex; align-items: center; margin-bottom: 5px; font-size: 12px; font-weight: 600; }
-    .dot { width: 12px; height: 12px; border-radius: 50%; margin-right: 8px; border: 1px solid #333; }
-    .tri { width: 0; height: 0; border-left: 6px solid transparent; border-right: 6px solid transparent; border-bottom: 10px solid #f59e0b; margin-right: 8px; }
-    .search-ring { width: 10px; height: 10px; border-radius: 50%; border: 3px solid red; background: white; margin-right: 8px; }
+    .legend-item { display: flex; align-items: center; margin-bottom: 6px; font-size: 12px; font-weight: bold; }
+    .dot { width: 12px; height: 12px; border-radius: 50%; margin-right: 10px; border: 1px solid #333; }
+    .tri { width: 0; height: 0; border-left: 7px solid transparent; border-right: 7px solid transparent; border-bottom: 12px solid var(--orange); margin-right: 10px; }
+    .search-ring { width: 10px; height: 10px; border-radius: 50%; border: 3px solid red; background: white; margin-right: 10px; }
   </style>
 </head>
 <body>
 
-<div class="topbar">
-  <div style="font-weight: bold;">Cheverly Air Quality</div>
-  <nav class="nav"><a href="index.html">Home</a><a href="dashboard.html" style="font-weight: bold; opacity: 1;">Dashboard</a></nav>
-</div>
+<header class="topbar">
+  <div>Cheverly EJAT Network</div>
+  <nav class="nav"><a href="index.html">Home</a><a href="dashboard.html" style="font-weight:bold; opacity:1;">Dashboard</a></nav>
+</header>
 
 <div id="layout">
   <aside id="sidebar">
@@ -46,13 +46,13 @@
       <button onclick="findAddress()">Find Nearest Station</button>
     </div>
     <div class="card">
-      <label>Station List</label>
+      <label>Station Selection</label>
       <select id="devSel" onchange="handleSelect(this.value)"></select>
     </div>
-    <div class="card" style="text-align: center;">
-      <label id="statName">Current Status</label>
+    <div class="card" style="text-align:center;">
+      <label id="statLabel">Current Reading</label>
       <div id="aqiDisplay" class="aqi-val" style="color:#ccc;">--</div>
-      <div style="font-size:0.7rem; font-weight:bold; color:#777;">CUMULATIVE CE-AQI</div>
+      <div style="font-size:0.7rem; font-weight:bold; color:#555;">CE-AQI (Cumulative)</div>
       <hr style="margin:15px 0; border:0; border-top:1px solid #eee;">
       <div class="legend-item"><span class="dot" style="background:#00e400"></span> Good (0-50)</div>
       <div class="legend-item"><span class="dot" style="background:#ffff00"></span> Moderate (51-100)</div>
@@ -72,10 +72,11 @@
 <script>
   const API_KEY = "9ADB5C6C-A9B0-11EF-A261-42010A80000F";
   const DC_REF = "175563";
-  // Switching to a more robust proxy approach
+  // Updated proxy rotation
   const PROXIES = [
-    "https://api.allorigins.win/get?url=",
-    "https://corsproxy.io/?"
+    "https://api.allorigins.win/raw?url=",
+    "https://corsproxy.io/?",
+    "https://thingproxy.freeboard.io/fetch/"
   ];
   let pIdx = 0;
 
@@ -89,32 +90,28 @@
   const chart = new Chart(document.getElementById('airChart').getContext('2d'), {
     type: 'line',
     data: { datasets: [
-      { label: 'Selected Station', data: [], borderColor: '#4477ce', tension: 0.2, fill: true, backgroundColor: 'rgba(68, 119, 206, 0.1)' },
+      { label: 'Local Station', data: [], borderColor: '#4477ce', tension: 0.2, fill: true, backgroundColor: 'rgba(68, 119, 206, 0.1)' },
       { label: 'DC City Avg', data: [], borderColor: 'red', borderDash: [5,5], tension: 0.2, fill: false }
     ]},
     options: { responsive: true, maintainAspectRatio: false, scales: { x: { type: 'time' }, y: { beginAtZero: true } } }
   });
 
   async function call(endpoint) {
-    // Append API key directly to URL to avoid Header-based CORS blocks
+    // Append API key to URL to avoid Header-based CORS blocks
     const separator = endpoint.includes('?') ? '&' : '?';
-    const targetUrl = `${endpoint}${separator}api_key=${API_KEY}`;
+    const finalUrl = `${endpoint}${separator}api_key=${API_KEY}`;
     
     for (let i = 0; i < PROXIES.length; i++) {
       try {
-        const proxyUrl = `${PROXIES[pIdx]}${encodeURIComponent(targetUrl)}`;
-        const response = await fetch(proxyUrl);
-        const json = await response.json();
-        // AllOrigins wraps content in a .contents property
-        return json.contents ? JSON.parse(json.contents) : json;
-      } catch (e) {
-        pIdx = (pIdx + 1) % PROXIES.length;
-      }
+        const full = `${PROXIES[pIdx]}${encodeURIComponent(finalUrl)}`;
+        const r = await fetch(full);
+        if (r.ok) return await r.json();
+      } catch (e) { pIdx = (pIdx + 1) % PROXIES.length; }
     }
-    throw "API Unavailable";
+    throw "Connectivity error";
   }
 
-  function getAQIColor(v) {
+  function getColor(v) {
     return v <= 50 ? "#00e400" : v <= 100 ? "#ffff00" : v <= 150 ? "#ff7e00" : "#ff0000";
   }
 
@@ -137,10 +134,10 @@
         searchMarker = L.circleMarker([lat, lon], { radius: 10, color: 'red', fillColor: 'white', fillOpacity: 1, weight: 3 }).addTo(map);
         map.flyTo([lat, lon], 16);
       }
-    } catch(e) {}
+    } catch(e) { console.error(e); }
   }
 
-  async function updateData(id) {
+  async function refresh(id) {
     const start = Math.floor(Date.now()/1000) - 86400;
     try {
       const [loc, dc] = await Promise.all([
@@ -152,14 +149,13 @@
       chart.data.datasets[1].data = parse(dc);
       chart.update();
       const val = chart.data.datasets[0].data.slice(-1)[0]?.y || 0;
-      const display = document.getElementById('aqiDisplay');
-      display.innerText = val;
-      display.style.color = getAQIColor(val);
-      document.getElementById('statName').innerText = SENSORS[id] || "Station Reading";
+      document.getElementById('aqiDisplay').innerText = val;
+      document.getElementById('aqiDisplay').style.color = getColor(val);
+      document.getElementById('statLabel').innerText = SENSORS[id] || "Station Reading";
     } catch(e) { document.getElementById('aqiDisplay').innerText = "ERR"; }
   }
 
-  function handleSelect(id) { if(markers[id]) { map.flyTo(markers[id].getLatLng(), 15); updateData(id); } }
+  function handleSelect(id) { if(markers[id]) { map.flyTo(markers[id].getLatLng(), 15); refresh(id); } }
 
   async function init() {
     const sel = document.getElementById('devSel');
@@ -173,14 +169,13 @@
       res.data.forEach(r => {
         const id = String(r[0]);
         if (SENSORS[id]) {
-          const aqi = toAQI(r[3]);
-          const m = L.circleMarker([r[1], r[2]], { radius: 10, fillColor: getAQIColor(aqi), color: "#000", weight: 2, fillOpacity: 0.9 }).addTo(map);
+          const m = L.circleMarker([r[1], r[2]], { radius: 10, fillColor: getColor(toAQI(r[3])), color: "#000", weight: 2, fillOpacity: 0.9 }).addTo(map);
           markers[id] = m; sel.add(new Option(SENSORS[id], id));
           m.on('click', () => { sel.value = id; handleSelect(id); });
         }
       });
     } catch(e) {}
-    updateData("203577");
+    refresh("203577");
   }
   init();
 </script>
